syntax = "proto3";

package protoreq;

// ErrCode 通用错误定义
message ErrCode {
    // 用于响应消息(框架使用的字段, 使用者不用手动设置).
    int64 seqid = 1;
    // 错误码.
    int32 code = 2;
    // 错误详细消息.
    string msg = 3;
}
